[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscad_docsgen"
version = "2.0.48"
authors = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
maintainers = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
description = "A processor to generate Markdown code documentation with images from OpenSCAD source comments."
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["openscad", "documentation generation", "docs generation", "docsgen"]
dependencies = [
    "pillow>=10.3.0",
    "PyYAML>=6.0",
    "scipy>=1.15.3",
    "openscad_runner>=1.1.2"
]

[project.scripts]
openscad-docsgen = "openscad_docsgen:main"
openscad-mdimggen = "openscad_docsgen.mdimggen:mdimggen_main"

[project.urls]
"Homepage" = "https://github.com/belfryscad/openscad_docsgen"
"Repository" = "https://github.com/belfryscad/openscad_docsgen"
"Bug Tracker" = "https://github.com/belfryscad/openscad_docsgen/issues"
"Releases" = "https://github.com/belfryscad/openscad_docsgen/releases"
"Usage" = "https://github.com/belfryscad/openscad_docsgen/README.rst"
"Documentation" = "https://github.com/belfryscad/openscad_docsgen/WRITING_DOCS.md"
